tests/negative/gold/clashing-function-test.gold
tests/negative/clashing-function-test.toit:8:1: error: Redefinition of 'foo'
foo:
^~~
tests/negative/clashing-function-test.toit:5:1: note: First definition of 'foo'
foo:
^~~
Compilation failed
